fix: form gap

--- a/src/components/getInTouch/get-in-touch-form.scss
+++ b/src/components/getInTouch/get-in-touch-form.scss
@@ -1,7 +1,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 25px;
   width: 100%;
   order: 2;
   .form-item-wrapper {
